--- a/style.css
+++ b/style.css
@@ -227,14 +227,14 @@ top
 @media screen and (max-width: 767px) {
   .top-picture {
     padding-top: 120%;
-    background: url(top.png) center center/cover;
+    background: url(top_s.png) center center/cover;
   }
 }
 
 @media screen and (min-width: 768px) {
   .top-picture {
     padding-top: 55%;
-    background: url(top_s.png) top right/82.5% no-repeat;
+    background: url(top.png) top right/82.5% no-repeat;
   }
 }
 
@@ -394,14 +394,14 @@ about
 
 @media screen and (max-width: 767px) {
   .about {
-    background: url(bg.png) center center/cover;
+    background: url(bg_2.png) center center/cover;
     padding: 176px 0 52px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .about {
-    background: url(bg_2.png) center center/cover;
+    background: url(bg.png) center center/cover;
   }
 }
 
